Fix text alignment issues

--- a/src/client/components/text-view/text-view.scss
+++ b/src/client/components/text-view/text-view.scss
@@ -36,6 +36,6 @@
     color: $white1;
     height: 100%;
     display: grid;
-    justify-content: center;
+    text-align: center;
     align-items: center;
 }
