--- a/src/client/components/uploader/uploader.scss
+++ b/src/client/components/uploader/uploader.scss
@@ -5,7 +5,7 @@
     @include box();
     height: 60px;
     display: grid;
-    justify-content: center;
+    text-align: center;
     align-items: center;
     font-size: 1.7rem;
     font-weight: bold;
